manifests/telemetry/base/prometheus/operator/controller-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-operator
  labels:
    app.kubernetes.io/component: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-operator
      app.kubernetes.io/component: controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus-operator
        app.kubernetes.io/component: controller
    spec:
      serviceAccountName: prometheus-operator
      automountServiceAccountToken: true
      containers:
        - name: prometheus-operator
          image: prometheus-operator:TO_BE_FILLED
          args:
            - --kubelet-service=kube-system/kubelet
            - --kubelet-endpoints=true
            - --kubelet-endpointslice=false
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 60
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 20m
              memory: 50Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
