manifests/telemetry/base/prometheus/operator/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-operator
  labels:
    app.kubernetes.io/component: controller
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
spec:
  selector:
    app.kubernetes.io/name: prometheus-operator
    app.kubernetes.io/component: controller
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-operator
  labels:
    app.kubernetes.io/component: controller
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-operator
      app.kubernetes.io/component: controller
  ingress:
    - fromEntities: [cluster]
      toPorts:
        - ports:
            - port: http
              protocol: TCP
          rules:
            http:
              - method: GET
                path: /metrics
